# GE_LLM

./: README.md  analyze_all.sh  analyze_graph.py  annotation_survey_app.py  build_graph.py  char_alias.json  config.yaml  pyproject.toml  research_plan.md  run_judge_pipeline.py  run_llm_extraction.py  test_llm.py  test_llm_context.py
analysis_reports/book_1/: analysis_report.txt  book_1_network.html
analysis_reports/book_1_sentenceSplitting/: analysis_report.txt  book_1_sentenceSplitting_network.html
analysis_reports/book_2/: analysis_report.txt  book_2_network.html
analysis_reports/book_3/: analysis_report.txt  book_3_network.html
analysis_reports/book_4/: analysis_report.txt  book_4_network.html
analysis_reports/book_5/: analysis_report.txt  book_5_network.html
analysis_reports/book_6/: analysis_report.txt  book_6_network.html
analysis_reports/book_7/: analysis_report.txt  book_7_network.html
analysis_reports/book_8/: analysis_report.txt  book_8_network.html
data/: test.txt
data/Middlemarch/: book_1.txt  book_2.txt  book_3.txt  book_4.txt  book_5.txt  book_6.txt  book_7.txt  book_8.txt
gold_annotations/: book_1_chapter_001_SAMPLE.json
graph_artifacts/: book_1_graph.gml  book_1_sentenceSplitting_graph.gml  book_2_graph.gml  book_3_graph.gml  book_4_graph.gml  book_5_graph.gml  book_6_graph.gml  book_7_graph.gml  book_8_graph.gml
run_logs/: complete_run_1.txt
src/: character_mapper.py  data_preprocessor.py  evaluation_metrics.py  gemini_judge.py  graph_manager.py  llm_client.py  prompt_manager.py  schemas.py  settings.py
(+97 files in other folders)
